<resources>
    <string name="app_name">AIUB Student</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_card_view_message_in_dashboard">Do you find \'AIUB-Student\' helpful? if yes, Share the app with your AIUBian friends.</string>
    <string name="share_card_view_message_title_in_dashboard"><![CDATA[Ultimately! it\'s all about love & friendship]]></string>
    <string name="warning_title">Warning</string>
    <string name="warning_message">Do you want to Exit.</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="internet_connection_title">Oops! No Internet Connection</string>
    <string name="internet_connection_message">Check your network settings and try again.</string>
    <string name="loading">Loading...</string>
    <string name="loading_message">Wait Please</string>
    <string name="link_subject">AIUB-Student</string>
    <string name="link">www.arafat.net</string>
    <string name="share">Share</string>


    <!--    for RecyclerView-->
    <string-array name="country_desc">
         <item>ELECTRONIC DEVICES</item>
         <item>ENGINEERING MANAGEMENT	</item>
        <item>MATRICES, VECTORS, FOURIER ANALYSIS</item>
     </string-array>

    <string-array name="country_Name">
        <item>Australia </item>
        <item>Bangladesh </item>
        <item>Bhutan </item>
        <item>Canada  </item>
        <item>China </item>
        <item>Denmark  </item>
     </string-array>
</resources>