<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="20dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/exit_dialog_background"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/exit_dialog_top_background"
            android:padding="10dp"
            android:text="@string/warning_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/warning_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_warning_24"

            app:layout_constraintBottom_toBottomOf="@+id/text_title"
            app:layout_constraintEnd_toEndOf="@+id/text_title"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/warning_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/warning_message"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="22sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_no"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/exit_dialog_no_background"
        android:text="@string/no"
        android:textColor="@color/white"
        android:textSize="14sp"


        app:layout_constraintBottom_toBottomOf="@+id/layout_dialog"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/layout_dialog"
        app:layout_constraintTop_toBottomOf="@+id/layout_dialog" />

    <Button
        android:id="@+id/button_yes"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/exit_dialog_yes_background"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="14sp"


        app:layout_constraintBottom_toBottomOf="@+id/layout_dialog"
        app:layout_constraintEnd_toEndOf="@+id/layout_dialog"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/layout_dialog" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>